upgraded Spring version